src/objects/peer__RequiredDocument__c.object
<CustomObject>
    <description>Lists all required document for a lender account</description>
    <fields>
        <fullName>peer__Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Borrower</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informative</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>peer__DocumentName__c</fullName>
        <description>Name of the required document</description>
        <label>Document Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>peer__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Doc</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Required Document</label>
    <listViews>
        <fullName>peer__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Required Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>peer__category_check</fullName>
        <active>true</active>
        <description>make sure that category is populated</description>
        <errorConditionFormula>ISNULL(peer__Category__c )</errorConditionFormula>
        <errorMessage>Category cannot be empty</errorMessage>
    </validationRules>
</CustomObject>